[package]
name = "grapple-hook"
version = "23.0.0"
description = "Configuration Tool for Grapple Hardware"
authors = ["Jaci Brunning <jaci.brunning@gmail.com>"]
license = "GPLv3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
rust-embed = "6.6.1"
anyhow = "1.0.70"
ssh2 = "0.9.4"
tokio-util = { version = "0.7.7", features= ["full"] }
futures-util = "0.3.28"
grapple-frc-msgs = "~2024.0.0"
async-trait = "0.1.68"
log = "0.4.17"
futures = "0.3.28"
env_logger = "0.10.0"
tokio-scoped = "0.2.0"
tokio-serial = "5.4.4"
bytes = "1.4.0"
serde-error = "0.1.2"
schemars = "0.8.12"
network-interface = "1.0.1"
grapple-hook-macros = { path = "../grapple-hook-macros" }
uuid = "1.6.1"
semver = "1.0.20"

[[bin]]
name = "grapple-hook"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen-schema.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
